# pydra-deface

./: .editorconfig  README.md  pyproject.toml
pydra_deface/: __main__.py  cli.py  tasks.py  workflow.py
pydra_deface/tasks/: __init__.py  fslmaths.py
